@@ -1,3 +1,8 @@
+2002-07-29  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* tmda-inject (main): Optionally parse the Subject: header for
+	X-TMDA override actions.
+
 2002-07-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* tmda-ofmipd (SMTPServer.readable): Defer incoming connections if
